tests/valid/trait/assoc_projection_generic_local_bound.facet
trait Iterator {
  type Item;
}

fn keep_item<T>(x: affine <affine T as Iterator>::Item) -> affine <affine T as Iterator>::Item where T: Iterator {
  x
}
