tests/invalid/function/generic_direct_call_infer_bound_unsatisfied.facet
trait Show;

impl Show for affine bool;

fn keep<T>(x: affine T) -> affine T where T: Show {
  x
}

fn main() -> affine isize {
  (keep 1)
}
